[awscurl] Adds extra parameters to dataset